--- a/src/components/ContactUs/css/whatwedo.css
+++ b/src/components/ContactUs/css/whatwedo.css
@@ -22,38 +22,36 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-around;
     width: 100%;
     padding: 30px 0px 30px 0px;
     color: var(--whatwedo--fontcolor);
     background-color: var(--whatwedo--white);
     margin-bottom: 100px;
 }
-
-.whatwedogreenbox{
-    height: 450px;
-    display: flex;
-    width: 30%;
-    background-color: var(--whatwedo--theme);
-}
 @media(max-width: 850px){
-    .whatwedogreenbox{
-        width: 40%;
-        height: 350px;
+    .whatwedocontainer{
+        align-items: start;
+        flex-direction: column-reverse;
     }
 }
 
+
 .whatwedoimagebox{
+    padding-left: 50px;
     align-items: center;
     justify-content: center;
+}@media(max-width: 850px){
+    .whatwedoimagebox{
+        padding-left: 10px;
+    }
 }
 
 .whatwedoimage{
-    margin-left: -300px;
     max-width: 450px;
     max-height: 450px;
 }@media(max-width: 850px){
     .whatwedoimage{
-        margin-left: -140px;
         max-width: 350px;
         max-height: 350px;
     }
