--- a/src/components/ContactUs/css/whatwedo.css
+++ b/src/components/ContactUs/css/whatwedo.css
@@ -29,7 +29,14 @@
     background-color: var(--whatwedo--white);
     margin-bottom: 100px;
 }
-@media(max-width: 850px){
+@media(max-width: 1200px){
+    .whatwedocontainer{
+        align-items: start;
+        padding-left: 10px;
+        padding-right: 30px;
+    }
+}
+@media(max-width: 900px){
     .whatwedocontainer{
         align-items: start;
         flex-direction: column-reverse;
@@ -41,7 +48,14 @@
     padding-left: 50px;
     align-items: center;
     justify-content: center;
-}@media(max-width: 850px){
+}
+@media(max-width: 1400px){
+    .whatwedoimagebox{
+        padding-left: 30px;
+    }
+}
+
+@media(max-width: 850px){
     .whatwedoimagebox{
         padding-left: 10px;
     }
@@ -50,7 +64,14 @@
 .whatwedoimage{
     max-width: 450px;
     max-height: 450px;
-}@media(max-width: 850px){
+}
+@media(max-width: 1400px){
+    .whatwedoimage{
+        max-width: 350px;
+        max-height: 350px;
+    }
+}
+@media(max-width: 850px){
     .whatwedoimage{
         max-width: 350px;
         max-height: 350px;
@@ -65,7 +86,7 @@
     padding: 0px 30px 0px 30px;
     text-align: start;
 }
-@media(max-width: 850px){
+@media(max-width: 900px){
     .whatwedoinfo{
         width: 90%;
     }
