--- a/src/components/css/form.css
+++ b/src/components/css/form.css
@@ -19,6 +19,7 @@
 }
 
 
+
 .formcontainer{
     background-color: white;
     display: flex;
@@ -43,6 +44,14 @@
     text-align:start;
     width: 55%;
 }
+@media(max-width: 1450px){
+    .formtextbox{
+        margin-bottom: 50px;
+        width: 100%;
+        padding-left: 0;
+    }
+}
+
 @media(max-width: 850px){
     .formtextbox{
         margin-bottom: 50px;
@@ -145,6 +154,11 @@
     align-items: center;
     justify-content: center;
 }
+@media(max-width: 1450px){
+    .formmainbox{
+        width: 100%;
+    }
+}
 @media(max-width: 850px){
     .formmainbox{
         width: 100%;
@@ -163,6 +177,13 @@
     box-shadow: 0px 0px 30px 1px var(--form--theme);
     border-radius: 20px;
     text-align: center;
+}
+@media(max-width: 1450px){
+    .formbox{
+        margin-top: 40px;
+        justify-self: center;
+        width: 80%;
+    }
 }
 @media(max-width: 850px){
     .formbox{
