--- a/src/components/css/form.css
+++ b/src/components/css/form.css
@@ -60,7 +60,6 @@
     }
 }
 
-
 .formtextbox h1{
     width: 80%;
     padding-top: 0px;
@@ -138,9 +137,12 @@
     display: inline-block;
 }
 .formicontxttext h4{
+    margin: 0;
+    padding: 0;
     font-size: 18px;
 }
 .formicontxttext p{
+    margin: 0;
     font-size: 12px;
     width: inherit;
 }
